<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>okeanos</groupId>
	<artifactId>okeanos</artifactId>
	<version>4.0.0-SNAPSHOT</version>
	<name>okeanos (OSGi project)</name>

	<packaging>pom</packaging>
	<description>Okeanos Project Description</description>
	<url>https://landsteiner.fh-salzburg.ac.at/</url>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>wlausenhammer</id>
			<name>Wolfgang Lausenhammer</name>
			<email>wlausen@bgsu.edu</email>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>-5</timezone>
			<properties>
				<picUrl>http://www.gravatar.com/avatar/1cb8530e666a882a2d0e15cfe7273335</picUrl>
			</properties>
		</developer>
	</developers>

	<issueManagement>
		<system>YouTrack</system>
		<url>https://landsteiner.fh-salzburg.ac.at/youtrack</url>
	</issueManagement>

	<scm>
		<connection>scm:git:https://github.com/wolfgang-lausenhammer/Okeanos.git</connection>
		<developerConnection>scm:git:https://github.com/wolfgang-lausenhammer/Okeanos.git</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/wolfgang-lausenhammer/Okeanos.git</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<sonar.language>java</sonar.language>
		<gemini-version>2.0.0.M02</gemini-version>
		<spring-version>3.2.4.RELEASE</spring-version>
		<aspectj-version>1.7.4</aspectj-version>
		<jiac-version>5.1.5</jiac-version>
		<log4j-version>1.2.17</log4j-version>
		<joda-time-version>2.3</joda-time-version>
		<guava-version>16.0</guava-version>
		<pax-logging-version>1.7.2</pax-logging-version>
		<activemq-protobuf-version>1.1</activemq-protobuf-version>
		<activemq-version>5.5.0</activemq-version>
		<activeio-version>3.1.4</activeio-version>
		<simple-space-core-version>2.6.3</simple-space-core-version>
		<getter-setter-finder-version>1.1.1</getter-setter-finder-version>
		<field-util-version>1.0</field-util-version>
		<reflective-test-version>1.1</reflective-test-version>
		<howl-version>1.0.1-1</howl-version>
		<javax-annotation-version>1.0</javax-annotation-version>
		<javax-inject-version>1</javax-inject-version>
		<ecj-version>21</ecj-version>
		<jscience-version>4.3.1</jscience-version>
		<quartz-version>2.2.1</quartz-version>
		<commons-math-version>3.2</commons-math-version>
		<commons-lang-version>3.3</commons-lang-version>
		<commons-io-version>2.4</commons-io-version>
		<compiled-bundle-settings-version>4.0.0-SNAPSHOT</compiled-bundle-settings-version>
		<wrapper-bundle-settings-version>4.0.0-SNAPSHOT</wrapper-bundle-settings-version>
		<individual-wrapper-bundle-settings-version>4.0.0-SNAPSHOT</individual-wrapper-bundle-settings-version>
		<okeanos-control-version>4.0.0-SNAPSHOT</okeanos-control-version>
		<okeanos-control-impl-version>4.0.0-SNAPSHOT</okeanos-control-impl-version>
		<okeanos-core-version>3.0.0</okeanos-core-version>
		<okeanos-core-impl-version>4.0.0-SNAPSHOT</okeanos-core-impl-version>
		<okeanos-data-version>4.0.0-SNAPSHOT</okeanos-data-version>
		<okeanos-data-impl-version>4.0.0-SNAPSHOT</okeanos-data-impl-version>
		<okeanos-logging-version>1.0.0</okeanos-logging-version>
		<okeanos-model-version>3.0.0</okeanos-model-version>
		<okeanos-model-impl-version>4.0.0-SNAPSHOT</okeanos-model-impl-version>
		<okeanos-management-version>3.0.0</okeanos-management-version>
		<okeanos-management-impl-version>4.0.0-SNAPSHOT</okeanos-management-impl-version>
		<okeanos-runner-version>4.0.0-SNAPSHOT</okeanos-runner-version>
		<okeanos-jiac-additions-version>1.0.0</okeanos-jiac-additions-version>
		<okeanos-spring-misc-version>1.0.0</okeanos-spring-misc-version>
		<okeanos-math-version>3.0.0-SNAPSHOT</okeanos-math-version>
		<pax-confman-propsloader-version>0.2.3</pax-confman-propsloader-version>
		<org-apache-felix-configadmin-version>1.8.0</org-apache-felix-configadmin-version>
		<pax-exam-version>3.4.0</pax-exam-version>
		<ops4j-url-version>1.5.2</ops4j-url-version>
		<slf4j-version>1.7.6</slf4j-version>
		<springockito-version>1.0.9</springockito-version>
		<hamcrest-version>1.3</hamcrest-version>
		<org.ops4j.pax.logging.DefaultServiceLog.level>WARN</org.ops4j.pax.logging.DefaultServiceLog.level>
		<pax.exam.framework>equinox</pax.exam.framework>
	</properties>

	<modules>
		<module>poms</module>
		<module>provision</module>
		<module>okeanos.management</module>
		<module>okeanos.management.impl</module>
		<module>okeanos.core</module>
		<module>okeanos.core.impl</module>
		<module>okeanos.control</module>
		<module>okeanos.control.impl</module>
		<module>okeanos.model</module>
		<module>okeanos.model.impl</module>
		<module>okeanos.runner</module>
		<module>okeanos.logging</module>
		<module>okeanos.data</module>
		<module>okeanos.data.impl</module>
		<module>okeanos.jiac.additions</module>
		<module>okeanos.spring.misc</module>
		<module>okeanos.math</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.ops4j</groupId>
				<artifactId>maven-pax-plugin</artifactId>
				<version>1.5</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<framework>felix</framework>
					<noUses>true</noUses>
					<pde>true</pde>
					<widenScope>true</widenScope>
					<provision>
						<param>scan-dir:target/classes</param>
					</provision>
					<maxmem>1024</maxmem>
					<meminitial>512</meminitial>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.16</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<forkMode>always</forkMode>
					<parallel>none</parallel>
					<threadCount>1</threadCount>
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>eclipse-gemini</id>
			<name>Eclipse Gemini Maven repository</name>
			<url>http://download.eclipse.org/gemini/mvn/</url>
		</repository>
		<repository>
			<id>dai-open</id>
			<name>DAI Open</name>
			<url>http://repositories.dai-labor.de/extern/content/repositories/dai-open</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>other</id>
			<name>Other</name>
			<url>http://dev.anyframejava.org/maven/repo/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.release</id>
			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.external</id>
			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
			<url>http://repository.springsource.com/maven/bundles/external</url>
		</repository>
		<repository>
			<id>com.springsource.repository.libraries.release</id>
			<name>SpringSource Enterprise Bundle Repository - SpringSource Library Releases</name>
			<url>http://repository.springsource.com/maven/libraries/release</url>
		</repository>
		<repository>
			<id>com.springsource.repository.libraries.external</id>
			<name>SpringSource Enterprise Bundle Repository - External Library Releases</name>
			<url>http://repository.springsource.com/maven/libraries/external</url>
		</repository>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Repository for Maven</name>
			<url>http://download.java.net/maven/2/</url>
			<layout>default</layout>
		</repository>
	</repositories>

</project>